proc-macro-error/test-crate/tests/ui/direct_abort.stderr
error: direct MacroError::abort() test
 --> $DIR/direct_abort.rs:4:10
  |
4 | make_fn!(direct_abort);
  |          ^^^^^^^^^^^^
