proc-macro-error/test-crate/tests/ui/direct_abort.rs
extern crate test_crate;
use test_crate::make_fn;

make_fn!(direct_abort);

fn main() {}
